--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>FitApp - Mobile App HTML Template</title>
+        <title>Konnect With Me- Mobile App HTML Template</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <meta content="" name="keywords" />
         <meta content="" name="description" />
@@ -43,7 +43,7 @@
         <link href="./css/contact.css" rel="stylesheet" />
     </head>
 
-    <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="51">
+    <body data-bs-spy="scroll" data-bs-toggle=".navbar" data-bs-offset="51">
         <div class="container-xxl bg-white p-0">
             <!-- Spinner Start -->
             <div
@@ -66,7 +66,7 @@
                     class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
                 >
                     <a href="" class="navbar-brand p-0">
-                        <h1 class="m-0">FitApp</h1>
+                        <h1 class="m-0">Konnect With Me</h1>
                         <!-- <img src="img/logo.png" alt="Logo"> -->
                     </a>
                     <button
@@ -208,11 +208,11 @@
                                 </p>
                                 <p>
                                     <i class="fa fa-phone-alt me-3"></i>+234
-                                    8169129560
+                                    8075975229
                                 </p>
                                 <p>
                                     <i class="fa fa-envelope me-3"></i
-                                    >edoziemagdalene@gmail.com
+                                    >jaynee5566@gmail.com
                                 </p>
                             </div>
 
@@ -257,7 +257,7 @@
                                 <a
                                     class="border-bottom"
                                     href="https://htmlcodex.com"
-                                    >Maggy.</a
+                                    >Jaynee</a
                                 >
                             </div>
                             <div class="col-md-6 text-center text-md-end">
